--- a/service-2/package.json
+++ b/service-2/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "scripts": {
     "npm": "npm i",
-    "build:routes": "mkdir -p src-api/routes && tsoa routes",
-    "build:swagger": "mkdir -p api && mkdir -p api/dist && tsoa swagger",
+    "build:web": "echo lol",
+    "build:routes": "mkdir -p src-api/routes && tsoa routes --configuration tsoa.json",
+    "build:swagger": "mkdir -p api && mkdir -p api/dist && tsoa swagger --configuration tsoa.json",
     "build:ts": "tsc -p src-api",
     "build:all": "npm run build:routes && npm run build:swagger && npm run build:ts && npm run build:web",
     "start": "node dist/main.js"
@@ -12,10 +13,12 @@
   "dependencies": {
     "@bithighlander/default-redis": "^5.8.0",
     "@bithighlander/loggerdog-client": "^5.8.0",
+    "@types/node": "^12.12.44",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
     "rate-limiter-flexible": "^2.1.7",
+    "socket.io": "^2.3.0",
     "swagger-ui-express": "^4.1.4",
     "tsoa": "^3.2.1"
   }
